# anisotropic_appearance_fabrication

./: .gitignore  .gitmodules  INSTALL_WIN10_GPU.txt  LICENSE  README.md  environment.yml  generate_all_results.ps1  generate_all_results.sh  generate_results_figure_1.ps1  generate_results_figure_1.sh  pyproject.toml
data/: README.md  ani_to_iso.json  brain.json  brain_for_overview_figure.json  bunny_0p25.json  bunny_0p25_memory_overflow.json  bunny_0p4.json  bunny_3p2.json  circle_30.json  circle_30_p4_ortho.json  cubic_pattern.json  dragon_0p25.json  geometrischer.json  geometrischer_0p25.json  icesl_qr_code.json  monkey_0p25.json  people.json  siggraph2023qrcode.json  square_30.json  square_30_2.json  square_30_3.json  square_dir_gradient.json  stress_0p4.json  stress_0p8.json  stress_1p6.json  stress_3p2.json  teapot_0p25.json  teaser.json  teaser_coarse.json  tiles_circle.json  tiles_square.json  wave.json  wave_coarse.json
data/hamiltonian_cycle/: donotremove.md
data/np/: .gitignore
data/png/: README.md
data/svg/: README.md
examples/: example_sine_wave.py  example_tree_util.py
src/cglib/: aabb.py  array.py  backend.py  cycle.py  direction.py  fdm_aa.py  gabor_filter.py  (+14 more)
tests/: test_aabb.py  test_cycle.py  test_direction.py  test_gabor_filter.py  test_line.py  test_math.py  test_morton.py  test_multivariate_normal.py  test_point_data.py  test_polyline.py  test_scalar.py  test_segment.py  test_sine_wave.py  test_texture.py  test_tree_util.py
tools/: README.md  cycle_to_txt.py  fill_2d_shape.py  grid_sines_to_txt.py  togcode.py  tosvg.py  visualize.py
(+8 files in other folders)
